fix: clean up css to remove unnecessary scrollbars (#119)
* fix: clean up css to remove unnecessary scrollbars

* refactor: remove whitespace

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,8 +4,11 @@
   margin: auto;
   font-family: "Poppins";
   text-align: center;
+  color: rgba(255, 255, 255, 0.87);
 }
 
 body {
   background: #1b202c url("./assets/Lines.svg") repeat-x fixed center 40%;
+  display: flex;
+  min-height: 90vh;
 }
